--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,9 +4,8 @@ body {
   line-height: 1;
 }
 
-
+/* Added main section container */
 main {
-  background-color: moccasin;
   padding: 10px;
   margin: 0 50px;
 } 
@@ -61,17 +60,21 @@ textarea{
 
 .past {
   background-color: #d3d3d3;
-  color: white;
+  color: black;
 }
 
 .present {
   background-color: #ff6961;
   color: white;
+  font-weight: bolder;
+  font-size: large;
 }
 
 .future {
   background-color: #77dd77;
-  color: white;
+  color: black;
+  font-size: larger;
+  font-weight: bolder;
 }
 
 .saveBtn {
